test/scc/stmt/semantic-errors/011.a
011.t:4:9: error: a default statement may only be used within a switch